initial uncompleted version

--- a/build.gradle
+++ b/build.gradle
@@ -186,10 +186,14 @@ gradle.startParameter.excludedTaskNames += "licenseTest"
 dependencies {
     compileOnly("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    implementation("de.alpharogroup:velocity-extensions:$velocityExtensionsVersion")
+    implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
+    implementation("de.alpharogroup:jobj-core:$jobjCoreVersion")
+    implementation("de.alpharogroup:xml-extensions:$xmlExtensionsVersion")
+    implementation("de.alpharogroup:resourcebundle-core:$resourcebundleCoreVersion")
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
     testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
-    testImplementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
     testImplementation("io.github.astrapi69:throw-able:$throwAbleVersion")
     testImplementation("io.github.astrapi69:gradle-migration-data:$gradleMigrationDataVersion")
     testImplementation("org.apache.commons:commons-text:$commonsTextVersion")
