--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectLeaderName=Asterios Raptis
 slash=/
 colon=:
 issuesPath=/issues
-projectDescription=Template project for create java library projects
+projectDescription=This project holds pojo classes for messages and email messages
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectScmGitUrlPrefix=scm:git:git:@
@@ -34,6 +34,10 @@ licenseGradlePluginVersion=0.15.0
 # dependencies versions #
 #########################
 lombokVersion=1.18.16
+velocityExtensionsVersion=1.4
+jobjCoreVersion=3.6
+xmlExtensionsVersion=7.3
+resourcebundleCoreVersion=4
 ##############################
 # test dependencies versions #
 ##############################
