--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,8 @@ velocityExtensionsVersion=1.4
 jobjCoreVersion=3.6
 xmlExtensionsVersion=7.3
 resourcebundleCoreVersion=4
+emailTailsVersion=5.0.2
+mysticCryptVersion=7.5
 ##############################
 # test dependencies versions #
 ##############################
