--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+group = "$groupPackage" as Object
+version = "$projectVersion" as Object
+description = "$rootProject.name"
+
 buildscript {
     repositories {
         maven {
@@ -5,11 +9,15 @@ buildscript {
         }
     }
     dependencies {
+        classpath "io.freefair.gradle:lombok-plugin:$gradlePluginLombokVersion"
         classpath "com.github.ben-manes:gradle-versions-plugin:$gradlePluginVersionsVersion"
         classpath "gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin:$licenseGradlePluginVersion"
+        classpath "org.ajoberstar.grgit:grgit-gradle:$grgitGradlePluginVersion"
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:$spotlessGradlePluginVersion"
     }
 }
 
+apply plugin: "io.freefair.lombok"
 apply plugin: "java"
 apply plugin: "java-library"
 apply plugin: "maven-publish"
@@ -17,35 +25,62 @@ apply plugin: "signing"
 apply plugin: "com.github.ben-manes.versions"
 apply plugin: "com.github.hierynomus.license"
 apply plugin: "jacoco"
+apply plugin: "org.ajoberstar.grgit"
+apply plugin: "com.diffplug.spotless"
 
-group = "$groupPackage"
-version = "$projectVersion"
-description = "$rootProject.name"
-sourceCompatibility = "$projectSourceCompatibility"
+spotless {
+
+    format "misc", {
+        // define the files to apply `misc` to
+        target "*.gradle", "*.md", ".gitignore"
+
+        // define the steps to apply to those files
+        trimTrailingWhitespace()
+        indentWithSpaces() // or spaces. Takes an integer argument if you don"t like 4
+        endWithNewline()
+    }
+    java {
+        eclipse("4.19.0").configFile("src/test/resources/alpharo-formatter.xml")
+    }
+}
+
+task tagRelease {
+    description = "Tags the current head with the project\'s version."
+    doLast {
+        grgit.tag.add {
+            name = "RELEASE-${project.version.toString()}"
+            message = "New release in version ${version}"
+        }
+    }
+}
+
+sourceCompatibility = "$projectSourceCompatibility" as Object
 
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
-}
-
-tasks.withType(GenerateModuleMetadata) {
-    enabled = false
-}
-
-javadoc {
-    failOnError = false
-    if (JavaVersion.current().isJava9Compatible()) {
-        options.addBooleanOption("html5", true)
+    maven {
+        name "Sonatype Nexus Releases"
+        url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+        mavenContent {
+            releasesOnly()
+        }
+    }
+    maven {
+        name "Sonatype Nexus Snapshots"
+        url "https://oss.sonatype.org/content/repositories/snapshots"
+        mavenContent {
+            snapshotsOnly()
+        }
     }
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-}
-
-test {
-    useJUnitPlatform()
+    // uncomment the next line for build with compiler argument -Xlint:deprecation
+    // options.compilerArgs << "-Xlint:deprecation"
+    // uncomment the next line for build with compiler argument -Xlint:unchecked
+    // options.compilerArgs << "-Xlint:unchecked"
 }
 
 task sourcesJar(type: Jar) {
@@ -59,14 +94,12 @@ task javadocJar(type: Jar) {
     javadoc.properties.failOnError = true
 }
 
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled true
+javadoc {
+    failOnError = false
+    if(JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption("html5", true)
     }
 }
-
-check.dependsOn jacocoTestReport
 
 def releaseVersion = !version.endsWith("SNAPSHOT")
 
@@ -80,14 +113,14 @@ publishing {
             pom {
                 name = "$rootProject.name"
                 description = "$projectDescription"
-                url = "$projectScmProviderUrl" + "$projectHolderUsername" + "$slash" + "$rootProject.name"
+                url = "$projectScmProviderUrl"+"$projectHolderUsername"+"$slash"+"$rootProject.name"
                 organization {
                     name = "$projectOrganizationName"
                     url = "$projectOrganizationUrl"
                 }
                 issueManagement {
                     system = "$projectIssueManagementSystem"
-                    url = "$projectScmProviderUrl" + "$projectHolderUsername" + "$slash" + "$rootProject.name" + "$issuesPath"
+                    url = "$projectScmProviderUrl"+"$projectHolderUsername"+"$slash"+"$rootProject.name"+"$issuesPath"
                 }
                 licenses {
                     license {
@@ -116,8 +149,8 @@ publishing {
                 username System.getenv("$projectRepositoriesUserNameKey") ?: project.property("$projectRepositoriesUserNameKey")
                 password System.getenv("$projectRepositoriesPasswordKey") ?: project.property("$projectRepositoriesPasswordKey")
             }
-            def releasesRepoUrl = "$projectRepositoriesReleasesRepoUrl"
-            def snapshotsRepoUrl = "$projectRepositoriesSnapshotsRepoUrl"
+            def releasesRepoUrl = "$projectRepositoriesReleasesRepoUrl" as Object
+            def snapshotsRepoUrl = "$projectRepositoriesSnapshotsRepoUrl" as Object
             url = releaseVersion ? releasesRepoUrl : snapshotsRepoUrl
         }
     }
@@ -132,22 +165,23 @@ signing {
 jar {
     manifest {
         attributes(
-                "Name": project.name,
-                "Manifest-Version": project.version,
-                "Implementation-Title": "$groupPackage" + "." + "$rootProject.name",
+                "Name"                  : project.name,
+                "Manifest-Version"      : project.version,
+                "Implementation-Title"  : "$groupPackage" + "." + "$rootProject.name",
                 "Implementation-Version": project.version,
-                "Implementation-Vendor": "$projectLeaderName",
-                "Created-By": "Gradle ${gradle.gradleVersion}",
-                "Built-By": "$projectLeaderName",
-                "Build-Timestamp": new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
-                "Build-Jdk": "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
-                "Build-OS": "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}")
+                "Implementation-Vendor" : "$projectLeaderName",
+                "Created-By"            : "Gradle ${gradle.gradleVersion}",
+                "Built-By"              : "$projectLeaderName",
+                "Build-Timestamp"       : new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
+                "Build-Jdk"             : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+                "Build-OS"              : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}")
     }
 }
 
 license {
-    ext.year = "$projectInceptionYear"
-    ext.owner = "$projectLeaderName"
+    ext.year="$projectInceptionYear"
+    ext.owner="$projectLeaderName"
+    ignoreFailures = true
     header rootProject.file("src/main/resources/LICENSE.txt")
     excludes(["**/README",
               "**/README.md",
@@ -182,21 +216,38 @@ license {
 gradle.startParameter.excludedTaskNames += "licenseMain"
 gradle.startParameter.excludedTaskNames += "licenseTest"
 
+test {
+    useJUnitPlatform()
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
+check.dependsOn jacocoTestReport
+
 dependencies {
     compileOnly("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    implementation("de.alpharogroup:velocity-extensions:$velocityExtensionsVersion")
+    implementation("io.github.astrapi69:velocity-extensions:$velocityExtensionsVersion")
+    implementation("javax.mail:mail:$mailVersion")
+    implementation("io.github.astrapi69:crypt-data:$cryptDataVersion")
+    implementation("io.github.astrapi69:crypt-api:$cryptApiVersion")
+    implementation("com.thoughtworks.xstream:xstream:$xstreamVersion")
+    implementation("org.apache.velocity:velocity:$velocityVersion")
     implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
-    implementation("de.alpharogroup:jobj-core:$jobjCoreVersion")
-    implementation("de.alpharogroup:email-tails:$emailTailsVersion")
-    implementation("de.alpharogroup:mystic-crypt:$mysticCryptVersion")
-    implementation("de.alpharogroup:xml-extensions:$xmlExtensionsVersion")
-    implementation("de.alpharogroup:resourcebundle-core:$resourcebundleCoreVersion")
+    implementation("io.github.astrapi69:jobj-core:$jobjCoreVersion")
+    implementation("io.github.astrapi69:email-tails:$emailTailsVersion")
+    implementation("io.github.astrapi69:mystic-crypt:$mysticCryptVersion")
+    implementation("io.github.astrapi69:xml-extensions:$xmlExtensionsVersion")
+    implementation("io.github.astrapi69:resourcebundle-core:$resourcebundleCoreVersion")
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
     testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
     testImplementation("io.github.astrapi69:throw-able:$throwAbleVersion")
-    testImplementation("io.github.astrapi69:gradle-migration-data:$gradleMigrationDataVersion")
     testImplementation("org.apache.commons:commons-text:$commonsTextVersion")
     testImplementation("org.meanbean:meanbean:$meanbeanVersion")
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
